--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: mkdir
       run: mkdir -p build && cd build
+    - name: check
+      run: ls ..
     - name: configure
       run: cmake ..
     - name: make
