--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,11 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: mkdir
-      run: mkdir -p build && cd build
     - name: check
-      run: ls ..
+      run: ls
     - name: configure
-      run: cmake ..
+      run: cmake
     - name: make
       run: cmake --build
