--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,8 +3,12 @@ add_executable(${PROJECT_NAME} main.c)
 add_subdirectory(parser)
 add_subdirectory(xml_conf_parser)
 
+find_package(libxml2 REQUIRED)
+
 target_link_libraries(${PROJECT_NAME}
   PRIVATE
     parser
     xml_conf_parser
+  PUBLIC
+    LibXml2::LibXml2
   )
