--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,8 +13,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: install libxml
-      run: sudo apt-get install -y libxml2-dev
+    #- name: install libxml
+    #  run: sudo apt-get install -y libxml2-dev
+    - name: check linbxml2
+      run: dpkg -L libxml2
+    - name: check linbxml2-dev
+      run: dpkg -L libxml2-dev
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
