--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Checkout submodules
       run: git submodule update --init --recursive
+    - name: Check submodules
+      run: ls ${{github.workspace}}/external/ethercat
     - name: Bootstrap ethercat
       run: .${{github.workspace}}/external/ethercat/bootstrap
     - name: configure ethercat
