--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Check submodules
       run: pwd
     - name: Bootstrap ethercat
+      shell: bash
       run: |
       ${GITHUB_WORKSPACE}/.github/ethercat/bootstrap
     - name: configure ethercat
