--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,10 +17,14 @@ jobs:
       run: git submodule update --init --recursive
     - name: Check submodules
       run: pwd
+    - name: ls submodules
+      shell: bash
+      run: |
+        ls /external/ethercat/bootstrap
     - name: Bootstrap ethercat
       shell: bash
       run: |
-        ${GITHUB_WORKSPACE}/.github/ethercat/bootstrap
+        ./external/ethercat/bootstrap
     - name: configure ethercat
       shell: bash
       run: |
