--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,10 +4,12 @@ set(CMAKE_BUILD_TYPE Debug)
 
 add_subdirectory(parser)
 add_subdirectory(xml_conf_parser)
+add_subdirectory(ecat_handler)
 
 
 target_link_libraries(${PROJECT_NAME}
   PRIVATE
     parser
     xml_conf_parser
+    ecat_handler
   )
