--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cmake.generator": "MinGW Makefiles",
     "files.associations": {
-        "ecrt.h": "c"
+        "ecrt.h": "c",
+        "log.h": "c",
+        "ecat_handler.h": "c",
+        "xml_conf_parser.h": "c"
     }
 }
