--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_BUILD_TYPE Debug)
 add_subdirectory(parser)
 add_subdirectory(xml_conf_parser)
 add_subdirectory(ecat_handler)
+add_subdirectory(log)
 
 
 target_link_libraries(${PROJECT_NAME}
@@ -12,4 +13,5 @@ target_link_libraries(${PROJECT_NAME}
     parser
     xml_conf_parser
     ecat_handler
+    log
   )
