--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Build
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build
-
-    - name: test
-      # testrun
-      run: ./build/bin/ecat_test --filename conf/master_config.xml -v
+    #can't test without configured /dev/EtherCAT0 from here on
+    #- name: test
+    #  # testrun
+    #  run: ./build/bin/ecat_test --filename conf/master_config.xml -v
