--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_executable(${PROJECT_NAME} main.c)
+add_library(${PROJECT_NAME} ethercat_src.c)
+add_executable(${PROJECT_NAME}_test main.c)
 
 set(CMAKE_BUILD_TYPE Debug)
 
@@ -7,6 +8,17 @@ add_subdirectory(xml_conf_parser)
 add_subdirectory(ecat_handler)
 add_subdirectory(log)
 
+target_sources(${PROJECT_NAME}
+  PRIVATE
+    ethercat_src.c
+  PUBLIC
+    ${CMAKE_CURRENT_LIST_DIR}/ethercat_src.h
+  )
+
+target_include_directories(${PROJECT_NAME}
+  PUBLIC
+    ${CMAKE_CURRENT_LIST_DIR}
+  )
 
 target_link_libraries(${PROJECT_NAME}
   PRIVATE
@@ -15,3 +27,11 @@ target_link_libraries(${PROJECT_NAME}
     ecat_handler
     log
   )
+  target_link_libraries(${PROJECT_NAME}_test
+    PRIVATE
+      ${PROJECT_NAME}
+      parser
+      xml_conf_parser
+      ecat_handler
+      log
+    )
