--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -45,4 +45,4 @@ jobs:
     - name: test
       # testrun
       # run: ./build/bin/ecat_test --filename conf/master_config.xml -v -c
-      run: ./build/bin/ethercat_src_test conf/ethercatcfg.txt
+      # run: ./build/bin/ethercat_src_test conf/ethercatcfg.txt
