--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -42,7 +42,7 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build
     #can't test without configured /dev/EtherCAT0 from here on
-    - name: test
+    #- name: test
       # testrun
       # run: ./build/bin/ecat_test --filename conf/master_config.xml -v -c
       # run: ./build/bin/ethercat_src_test conf/ethercatcfg.txt
