==10271== HEAP SUMMARY: ==10271==     in use at exit: 0 bytes in 0 blocks ==10271==   total heap usage: 1,796 allocs, 1,796 frees, 316,799 bytes allocated ==10271== ==10271== All heap blocks were freed -- no leaks are possible ==10271== ==10271== For lists of detected and suppressed errors, rerun with: -s ==10271== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,7 @@
         "log.h": "c",
         "ecat_handler.h": "c",
         "xml_conf_parser.h": "c"
-    }
+    },
+    "cmake.sourceDirectory": "${workspaceFolder}/.",
+    "cmake.buildDirectory": "${workspaceFolder}/build"
 }
