fixes for multiple pdos of same data direction and for undeclared IO variables in PLC program

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,11 +9,12 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/bin/ethercat_src_test",
-            "args": ["${workspaceFolder}/conf/ethercatcfg.txt"],
+            "args": ["${workspaceFolder}/build/ethercat.cfg"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
+            "miDebuggerPath": "/home/pi/gdb.sh",
             "MIMode": "gdb",
             "setupCommands": [
                 {
