refactored to enable multiple entires per PDO registration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "ecrt.h": "c",
         "log.h": "c",
         "ecat_handler.h": "c",
-        "xml_conf_parser.h": "c"
+        "xml_conf_parser.h": "c",
+        "algorithm": "c"
     },
     "cmake.cmakePath": "cmake",
     "cmake.sourceDirectory": "${workspaceFolder}/.",
