--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
-            "miDebuggerPath": "/home/pi/gdb.sh",
+            //"miDebuggerPath": "/home/pi/gdb.sh",
             "MIMode": "gdb",
             "setupCommands": [
                 {
